# local-web-search

./: .gitignore  Dockerfile  README.md  local_web_search.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt
src/local_web_search/: __init__.py  local_web_search.py  mcp_server.py
