[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-web-search"
version = "0.1.0"
description = "本地网页搜索工具"
requires-python = ">=3.10"
dependencies = [
    "playwright==1.40.0",
    "click==8.1.7",
    "beautifulsoup4==4.12.2",
    "readability-lxml==0.8.1",
    "markdown==3.5",
    "html2text==2020.1.16",
    "mcp==1.3.0",
    "mcp[cli]==1.3.0",
    "lxml[html_clean]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
] 

[project.scripts]
local_web_search = "local_web_search.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/local_web_search"]